Interfaz Chose-Rol

--- a/src/app/components/users/ichose-rol/ichose-rol.component.html
+++ b/src/app/components/users/ichose-rol/ichose-rol.component.html
@@ -1,1 +1,25 @@
-<p>ichose-rol works!</p>
+<div class="cards">
+
+    <div class="card-container">
+        
+        <div class="card">
+            <img src="images/company.png" alt="">
+            <div class="card-content">
+                <h3>Empresa</h3>
+                <p>Las empresas se especializan en la recolección de materiales para la creación de nuevos productos, con el objetivo de reutilizarlos y contribuir a un modelo de producción más sostenible.</p>
+                <a href="" class="btn">SER EMPRESA</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="images/reciclador.png" alt="">
+            <div class="card-content">
+                <h3>Reciclador</h3>
+                <p>El reciclador se encarga de entregar sus desechos reciclables a cambio de recompensas, incentivando así la participación activa en el proceso de reciclaje y contribuyendo a la protección del medio ambiente.</p>
+                <a href="" class="btn">SER RECICLADOR</a>
+            </div>
+        </div>
+
+
+
+</div>
