--- a/src/app/components/company/imaterials-request/imaterials-request.component.html
+++ b/src/app/components/company/imaterials-request/imaterials-request.component.html
@@ -1,1 +1,6 @@
-<p>imaterials-request works!</p>
+<app-header-company></app-header-company>
+<button (click)="openDialog()" class="circular-button">+</button>
+
+
+
+
