Creacion del Footer

--- a/src/app/components/users/ichose-rol/ichose-rol.component.html
+++ b/src/app/components/users/ichose-rol/ichose-rol.component.html
@@ -1,4 +1,6 @@
 <app-header-users/>
+
+
 <div class="cards">
 
     <div class="card-container">
@@ -20,7 +22,7 @@
                 <a href="" class="btn">SER RECICLADOR</a>
             </div>
         </div>
-
-
-
+    </div>
 </div>
+
+<app-footer-users/>
