--- a/src/app/components/users/footer-users/footer-users.component.scss
+++ b/src/app/components/users/footer-users/footer-users.component.scss
@@ -16,7 +16,7 @@
     position: relative;
     width: 100%;
     background: #000000;
-    padding: 20px 50px;
+    padding: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
