--- a/src/app/components/users/ilogin/ilogin.component.scss
+++ b/src/app/components/users/ilogin/ilogin.component.scss
@@ -1,28 +1,44 @@
-body {
-    font-family: 'default'; 
+/* Fuente de Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
+
+.container{
+    display: flex;
+    justify-content: center;
 }
 
 .login-wrapper {
     display: flex; 
-    justify-content: space-between; 
-    align-items: flex-start; 
-    margin: 10rem; 
-    flex-wrap: wrap; 
+    justify-content:space-around; 
+    align-items: center; 
+    padding: 70px;
+    background-color: #fff;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    width: 90%;
+    margin-top: 150px;
+    margin-bottom: 75px;
+}
+
+.logo-container {
+    margin-right: 50px;
 }
 
 .login-container {
-    max-width: 600px; 
-    min-height: 300px; 
-    padding: 2rem;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #D9D9D9;
-    flex: 14; 
-    margin-top: 2rem; 
+    background-color: #ffffff;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.15);
+    max-width: 400px;
+    width: 100%;
 }
 
 .h2-Sesión {
-   text-align: center;
+    text-align: center;
+    color: #108310;
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: 600;
 }
 
 .login-form {
@@ -32,45 +48,64 @@ body {
 
 .login-form input {
     margin-bottom: 1rem; 
-    padding: 0.5rem; 
-    border-radius: 4px; 
-    border: 1px solid #ccc; 
+    padding: 0.75rem; 
+    border-radius: 8px; 
+    border: 1px solid #ddd; 
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.05);
+    font-size: 16px;
+}
+
+.login-form input:focus {
+    outline: none;
+    border-color: #108310;
 }
 
 .login-form button {
-    padding: 0.5rem; 
+    padding: 0.75rem; 
     border: none; 
-    border-radius: 4px; 
+    border-radius: 8px; 
     background-color: #108310; 
     color: white; 
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 
-
-.text-container {
-    max-width: 600px; 
-    margin-right: 3rem;
-    text-align: left; 
-    flex: 1 1 300px; 
+.login-form button:hover {
+    background-color: #0a6d0a;
 }
 
 .text {
     color: #666; 
     text-align: center;
+    margin-top: 20px;
 }
 
-.one-text {
+.register-link {
     color: #108310; 
     font-weight: bold;
-    text-align: center;
-    font-size: 50px;
+    text-decoration: none;
 }
 
-.second-text {
-    color: black; 
-    text-align: center;
-    font-size: 20px;
+.register-link:hover {
+    text-decoration: underline;
 }
 
+/* Responsividad */
+@media (max-width: 768px) {
+    .login-wrapper {
+        flex-direction: column;
+        padding: 20px;
+        margin-top: 180px;
+    }
 
+    .logo-container {
+        display: none; /* Ocultar la imagen en pantallas pequeñas */
+    }
 
-
+    .login-container {
+        max-width: 100%;
+        width: auto;
+    }
+}
