--- a/src/app/components/users/ilogin/ilogin.component.scss
+++ b/src/app/components/users/ilogin/ilogin.component.scss
@@ -101,7 +101,7 @@
     }
 
     .logo-container {
-        display: none; /* Ocultar la imagen en pantallas pequeñas */
+        display: none; 
     }
 
     .login-container {
