--- a/src/app/components/company/imaterials-request/imaterials-request.component.scss
+++ b/src/app/components/company/imaterials-request/imaterials-request.component.scss
@@ -1,6 +1,6 @@
 .circular-button {
-    width: 50px; 
-    height: 50px; 
+    width: 70px; 
+    height: 70px; 
     border-radius: 50%; 
     background-color: #108310; 
     color: white; 
@@ -10,6 +10,7 @@
     align-items: center;
     cursor: pointer;
     position: fixed; 
-    bottom: 20px; 
-    right: 20px; 
+    bottom: 30px; 
+    right: 50px; 
+    font-size: 50px;
 }
