--- a/src/app/components/company/iregister-company/iregister-company.component.scss
+++ b/src/app/components/company/iregister-company/iregister-company.component.scss
@@ -1,4 +1,4 @@
-.container{
+.container {
     display: flex;
     justify-content: center;
     margin-top: 120px;
@@ -6,22 +6,21 @@
 
 .form-wrapper {
     display: flex; 
-    justify-content:space-around; 
+    justify-content: space-around; 
     align-items: center; 
-    padding: 90px;
     background-color: #fff;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    width: 90%;
-    margin-top: 10px;
-    margin-bottom: 75px;
     width: 600px;
     height: 780px;
+    margin-top: 10px;
+    margin-bottom: 75px;
 }
 
 .form {
     display: flex;
     flex-direction: column;
+    width: 100%; /* Asegura que los inputs ocupen todo el ancho disponible */
 }
 
 .form input {
@@ -54,8 +53,7 @@
     background-color: #0a6d0a;
 }
 
-
-h2{
+h2 {
     text-align: center;
     color: #108310;
     margin-bottom: 20px;
@@ -64,14 +62,62 @@ h2{
 }
 
 .form input[type="file"] {
-    padding: 0.75rem;
+    padding: 6px;
     border: none;
     border-radius: 8px;
-    background-color: #b8b8b8;
+    background-color:#fff;
     color: rgb(0, 0, 0);
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.3s;
+    border: 2px solid #ddd; 
+}
+
+.form input[type="file"]:focus,
+.form input[type="file"]:active {
+    background-color: #e0f7e0; 
+    border-color: #108310; 
+    outline: none; 
+}
+
+@media (max-width: 768px) {
+    .form-wrapper {
+        padding: 20px;
+        margin-top: 170px;
+        width: 90%;
+        height: auto;
+        margin-bottom: 100px;
+        display: flex;
+        flex-direction: column; 
+        align-items: center;
+    }
+    .form {
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+        width: 100%;
+    }
+    .form input,
+    .form button {
+        width: 100%; 
+        padding: 0.5rem;
+        font-size: 0.9rem;
+        box-sizing: border-box; 
+        margin-bottom: 10px;
+    }
+    .form input[type="file"] {
+        font-size: 12px;
+    }
+    h2 {
+        font-size: 20px; 
+        margin-bottom: 15px;
+        text-align: center;
+    }
+    .container {
+        margin-top: 80px;
+        display: flex;
+        justify-content: center;
+    }
 }
 
