--- a/src/app/components/users/ichose-rol/ichose-rol.component.scss
+++ b/src/app/components/users/ichose-rol/ichose-rol.component.scss
@@ -68,3 +68,28 @@
     color: aliceblue;
     text-decoration: none; 
 }
+
+@media (max-width: 768px) {
+    .card {
+        margin: 15px; 
+    }
+    .cards {
+        width: 80%;
+        margin-top: 300px; 
+        margin-bottom: 150px; 
+        margin-left: auto; 
+        margin-right: auto; 
+    }
+
+    .card-content h3 {
+        font-size: 24px; 
+    }
+
+    .card-content p {
+        font-size: 14px; 
+    }
+
+    .btn {
+        padding: 6px 12px; 
+    }
+}
