--- a/src/app/components/company/iregister-company/iregister-company.component.scss
+++ b/src/app/components/company/iregister-company/iregister-company.component.scss
@@ -20,7 +20,7 @@
 .form {
     display: flex;
     flex-direction: column;
-    width: 100%; /* Asegura que los inputs ocupen todo el ancho disponible */
+    width: 100%;
 }
 
 .form input {
