--- a/src/app/components/admin/isee-company-request/isee-company-request.component.html
+++ b/src/app/components/admin/isee-company-request/isee-company-request.component.html
@@ -1,36 +1,27 @@
-<div class="form-container">
-    <form>
-        <div class="form-group">
-            <label for="viridis">Viridis</label>
-            <input type="text" id="viridis" name="viridis" value="Viridis" required>
+<app-header-admin/>
+<div class="container">
+    <div class="form-wrapper">
+        <div class="form-container">
+            <h2>Solicitud de Empresa</h2>
+            <form class="form">
+                <input type="text" id="nombre" name="nombre" placeholder="Nombre de la Empresa" required>
+                <input type="text" id="dueno" name="dueno" placeholder="Dueño de la Empresa" required>
+                <input type="text" id="direccion" name="direccion" placeholder="Dirección" required>
+                <input type="email" id="correo" name="correo" placeholder="Correo Electrónico" required>
+                <input type="number" id="telefono" name="telefono" placeholder="Teléfono" required>
+                
+                <div class="input-group">
+                    <input type="text" id="estado" name="estado" placeholder="Estado" required>
+                    <input type="text" id="ciudad" name="ciudad" placeholder="Ciudad/Municipio" required>
+                </div>
+                
+                <input type="file" id="fotos" name="fotos" accept="image/*">
+
+                <div class="input-group2">
+                <button type="submit">Autorizar acceso</button>
+                <button type="submit">Negar acceso</button>
+            </div>        
+            </form>
         </div>
-        <div class="form-group">
-            <label for="name">Nombre</label>
-            <input type="text" id="name" name="name" value="Osvaldo Ochoa" required>
-        </div>
-        <div class="form-group">
-            <label for="address">Dirección</label>
-            <input type="text" id="address" name="address" value="Barrio la Pila Seca" required>
-        </div>
-        <div class="form-group">
-            <label for="email">Correo Electrónico</label>
-            <input type="email" id="email" name="email" value="Oscar@gmail.com" required>
-        </div>
-        <div class="form-group">
-            <label for="phone">Teléfono</label>
-            <input type="text" id="phone" name="phone" value="963621321321" required>
-        </div>
-        <div class="form-group">
-            <label for="state">Estado</label>
-            <input type="text" id="state" name="state" value="Chiapas" required>
-        </div>
-        <div class="form-group">
-            <label for="city">Ciudad</label>
-            <input type="text" id="city" name="city" value="Tuxtla de Dominguez" required>
-        </div>
-        <div class="button-group">
-            <button type="submit" class="authorize">Autorizar Acceso</button>
-            <button type="button" class="deny">Negar Acceso</button>
-        </div>
-    </form>
+    </div>
 </div>
