--- a/src/app/components/admin/isee-company-request/isee-company-request.component.scss
+++ b/src/app/components/admin/isee-company-request/isee-company-request.component.scss
@@ -1,46 +1,138 @@
-.form-container {
+.container {
     display: flex;
     justify-content: center;
-    align-items: center; /* Centrar verticalmente */
-    flex-direction: column; /* Asegurar que el contenido se coloque en columna */
-    width: 300px;
-    margin: auto; /* Centrar horizontalmente */
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: white;
     margin-top: 30px;
 }
-.form-group {
-    margin-bottom: 15px;
+
+.form-wrapper {
+    display: flex; 
+    justify-content: space-around; 
+    align-items: center; 
+    background-color: #fff;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    width: 600px;
+    height: 630px;
+    margin-top: 80px;
+    margin-bottom: 75px;
 }
-.form-group label {
-    margin-bottom: 5px;
-    font-weight: bold;
-}
-.form-group input {
-    width: 100%;
-    padding: 8px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-.button-group {
+
+.form {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    width: 100%;
 }
-.button-group button {
-    padding: 10px 20px;
+
+.form input {
+    margin-bottom: 1rem; 
+    padding: 0.75rem; 
+    border-radius: 8px; 
+    border: 1px solid #ddd;
+    font-size: 16px;
+    transition: border-color 0.3s ease;
+}
+
+.form input:hover {
+    border-color: #108310; 
+}
+
+.form input:focus {
+    border-color: #108310;
+    outline: none;
+}
+
+.input-group {
+    display: flex;
+    gap: 10px;
+}
+
+.input-group input {
+    flex: 1;
+}
+
+.input-group2 {
+    display: flex;
+    gap: 10px;
+}
+
+.form button {
+    flex: 1;
+    padding: 0.75rem;
     border: none;
-    border-radius: 4px;
+    border-radius: 8px;
+    background-color: #108310;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
-.button-group .authorize {
-    background-color: #4CAF50;
-    color: white;
+
+.form button:hover {
+    background-color: #0a6d0a;
 }
-.button-group .deny {
-    background-color: #f44336;
-    color: white;
+
+h2 {
+    text-align: center;
+    color: #108310;
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.form input[type="file"] {
+    padding: 6px;
+    border: 2px solid #ddd;
+    border-radius: 8px;
+    background-color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+/* Responsividad */
+@media (max-width: 768px) {
+    .form-wrapper {
+        padding: 20px;
+        margin-top: 230px;
+        width: 90%;
+        height: auto;
+        margin-bottom: 100px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .form {
+        align-items: center;
+        width: 100%;
+    }
+
+    .form input,
+    .form button {
+        width: 100%;
+        padding: 0.5rem;
+        font-size: 0.9rem;
+        box-sizing: border-box;
+    }
+
+    .input-group {
+        display: flex;
+        flex-direction: row; 
+        gap: 10px; 
+        width: 100%;
+    }
+
+    .input-group2 {
+        display: flex;
+        flex-direction: row;
+        gap: 10px; 
+        width: 100%;
+    }
+
+    .input-group input,
+    .input-group2 button {
+        width: 100%;
+    }
 }
