--- a/src/app/components/company/dialog-addmaterialrequest/dialog-addmaterialrequest.component.html
+++ b/src/app/components/company/dialog-addmaterialrequest/dialog-addmaterialrequest.component.html
@@ -1,21 +1,26 @@
 <div class="dialog-container">
-    <h2 class="solicitud-titulo">Agregar Solicitud</h2>
-    <form class="solicitud-form">
-      <div class="input-container">
-        <input type="text" id="name" class="input-field" placeholder="Nombre del producto" required />
-      </div>
-      <div class="input-container">
-   
-        <input type="number" id="price" class="input-field" placeholder="Precio" required />
-      </div>
-      <div class="input-container">
-        <input type="file" id="image" class="input-field" placeholder="Imagen" />
-      </div>
-      <div class="input-container">
-        <input type="text" id="description" class="input-field" placeholder="Descripción" />
-      </div>
-      <button type="submit" class="close-button">Enviar</button>
-      <button type="button" class="close-button" (click)="closeDialog()">Cerrar</button>
-    </form>
+  <h2 class="solicitud-titulo">Agregar Solicitud</h2>
+  <div class="input-container">
+    <input type="text" id="name" class="input-field" placeholder="Nombre del producto" required />
   </div>
+  <div class="input-container">
+    <input type="number" id="price" class="input-field" placeholder="Precio" required />
+  </div>
+  <div class="input-container">
+    <div class="file-container">
+      <input type="file" id="fotos" class="file-input" />    
+    </div>
+  </div>
+  <div class="input-container">
+    <input type="text" id="description" class="input-field" placeholder="Descripción" />
+  </div>
+  <div class="button-container">
+    <button type="submit" class="close-button">Enviar</button>
+    <button type="button" class="close-button" (click)="closeDialog()">Cerrar</button>
+  </div>
+</div>
+
+
+
+
   
