Creacion de la Interfaz Solicitudes de Materiales para el Reciclador

--- a/src/app/components/company/imaterials-request/imaterials-request.component.html
+++ b/src/app/components/company/imaterials-request/imaterials-request.component.html
@@ -12,7 +12,7 @@
             <img class="imgprincipal" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWTdNwzcNVwqK17r9u1xH0VoPTEP_SzWgIXA&s" alt="">
             <div class="card-content">
                 <h2>Producto: </h2>
-                <h3>Card 1</h3>
+                <h3>Precio $</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut inventore beatae, quis itaque cum voluptate
                 molestias molestiae</p>
 
@@ -27,7 +27,7 @@
             <img class="imgprincipal" src="https://imagenes.heraldo.es/files/image_990_556/uploads/imagenes/2024/05/15/el-plastico-es-uno-de-los-materiales-que-mas-uso-puede-tener-a-la-hora-de-elaborar-productos-reciclados-pixabay.jpeg" alt="Comic">
             <div class="card-content">
                 <h2>Producto: </h2>
-                <h3>Card 1</h3>
+                <h3>Precio $</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut inventore beatae, quis itaque cum voluptate
                 molestias molestiae!</p>
 
@@ -42,7 +42,7 @@
             <img class="imgprincipal" src="https://www.reddeperiodistas.com/wp-content/uploads/2024/03/prensa-iberica-cierra-el-periodico-de-espana-en-version-papel.jpg.webp" alt="">
             <div class="card-content">
                 <h2>Producto: </h2>
-                <h3>Card 1</h3>
+                <h3>Precio $</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut inventore beatae, quis itaque cum voluptate
                 molestias molestiae, </p>
 
@@ -57,7 +57,7 @@
             <img class="imgprincipal" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5FvnjaZGEvacv3nitsElz489kfXhHy0n-vQ&s" alt="">
             <div class="card-content">
                 <h2>Producto: </h2>
-                <h3>Card 1</h3>
+                <h3>Precio $</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut inventore beatae, quis itaque cum voluptate
                 molestias molestiae, gfddddddddddd dfg dfgdfsgdf gdf gs fg dsfg df gklñl.</p>
 
