--- a/src/app/components/users/icommunity/icommunity.component.html
+++ b/src/app/components/users/icommunity/icommunity.component.html
@@ -1,3 +1,7 @@
+<app-header-company *ngIf="isCompany"></app-header-company>
+<app-header-recycler *ngIf="!isCompany"></app-header-recycler>
+
+
 <div class="card-container">
     <div class="card">
         <div class="card-header">
