--- a/src/app/components/company/imaterials/imaterials.component.scss
+++ b/src/app/components/company/imaterials/imaterials.component.scss
@@ -3,3 +3,21 @@
     justify-content: center;
     margin-top: 120px;
 }
+
+
+.circular-button {
+    width: 70px; 
+    height: 70px; 
+    border-radius: 50%; 
+    background-color: #108310; 
+    color: white; 
+    border: none; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    position: fixed; 
+    bottom: 80px; 
+    right: 50px; 
+    font-size: 50px;
+}
