--- a/src/app/components/company/istatistics/istatistics.component.html
+++ b/src/app/components/company/istatistics/istatistics.component.html
@@ -2,3 +2,5 @@
 <div class="chart-container">
     <p-chart type="bar" [data]="data" [options]="options"></p-chart>
   </div>
+
+<app-footer-users/>
