--- a/src/app/components/recycler/iregister-recycler/iregister-recycler.component.html
+++ b/src/app/components/recycler/iregister-recycler/iregister-recycler.component.html
@@ -8,7 +8,7 @@
             <input type="email" id="correo" name="correo" placeholder="Correo Electrónico" required>
             <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña" required>
             <input type="password" id="confirmarContrasena" name="confirmarContrasena" placeholder="Confirmar Contraseña" required>
-            <button type="submit">Registrarse</button>
+            <button type="submit" (click)="routeSuccessfulRegistration()">Registrarse</button>
             </form>
         </div>
     </div>
