--- a/src/app/components/users/header-users/header-users.component.html
+++ b/src/app/components/users/header-users/header-users.component.html
@@ -1,15 +1,15 @@
 <header class="header">
     <div class="back">
         <div class="menu container">
-            <a href="" ><img src="images/logo2.png" alt=""  class="logo"></a>
+            <a href="*"><img src="images/logo2.png" alt=""  class="logo"></a>
             <input type="checkbox" id= "menu">
             <label for="menu">
                 <img src="images/menu.png" alt="" width="25px">
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Registrarse</a></li>
-                    <li><a href="#">Iniciar Sesion</a></li>
+                    <li><a routerLink="/chose" routerLinkActive="active">Registrarse</a></li>
+                    <li><a routerLink="/login" routerLinkActive="active">Iniciar Sesion</a></li>
                     <button class="button">Donar Aqui</button>
                 </ul>
             </nav>
