--- a/src/app/components/users/ilogin/ilogin.component.html
+++ b/src/app/components/users/ilogin/ilogin.component.html
@@ -13,7 +13,7 @@
             <input type="password" placeholder="Contraseña" [(ngModel)]="password" name="password" required />
             <button type="submit">Iniciar Sesión</button>
 
-            <p class="text">¿No tienes una cuenta? <a href="#" class="register-link">Regístrate aquí</a></p>
+            <p class="text">¿No tienes una cuenta? <a routerLink="/chose" routerLinkActive="active" class="register-link">Regístrate aquí</a></p>
         </form>    
     </div>
 </div>
