--- a/src/app/components/admin/adminstable/adminstable.component.scss
+++ b/src/app/components/admin/adminstable/adminstable.component.scss
@@ -9,6 +9,7 @@
     margin: 8px;
     color: rgb(0, 0, 0);
     background-color: rgb(219, 219, 219);
+    cursor: pointer;
 }
 
 .table-button:hover{
