--- a/src/app/components/admin/isee-company-request/isee-company-request.component.html
+++ b/src/app/components/admin/isee-company-request/isee-company-request.component.html
@@ -1,36 +1,40 @@
-<div class="form-container">
-    <form>
-        <div class="form-group">
-            <label for="viridis">Viridis</label>
-            <input type="text" id="viridis" name="viridis" value="Viridis" required>
+<app-header-admin></app-header-admin>
+<div class="container">
+    <div class="card-wrapper">
+        <div class="card-container">
+            <h2>Información de la Solicitud</h2>
+            <div class="card-content">
+                <div class="column">
+                    <h3>Nombre de la Empresa:</h3>
+                    <p>Nombre de ejemplo</p>
+
+                    <h3>Correo Electrónico:</h3>
+                    <p>correojemplo.com</p>
+
+                    <h3>Estado:</h3>
+                    <p>Estado de ejemplo</p>
+
+                    <h3>Dirección:</h3>
+                    <p>Dirección de ejemplo</p>
+                </div>
+                <div class="column">
+                    <h3>Dueño de la Empresa:</h3>
+                    <p>Dueño de ejemplo</p>
+
+                    <h3>Teléfono:</h3>
+                    <p>+52 123 456 7890</p>
+
+                    <h3>Ciudad/Municipio:</h3>
+                    <p>Ciudad de ejemplo</p>
+                </div>
+                <div class="column image-container">
+                    <img src="https://tarifasdeluz.mx/sites/tarifasdeluz.mx/files/styles/large/public/ejemplo-recibo-cfe-frente_0.png?itok=TxuPCb2P" alt="Foto de ejemplo" class="preview-image">
+                </div>
+            </div>
+            <div class="button-group">
+                <button>Negar acceso</button>
+                <button>Autorizar acceso</button>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="name">Nombre</label>
-            <input type="text" id="name" name="name" value="Osvaldo Ochoa" required>
-        </div>
-        <div class="form-group">
-            <label for="address">Dirección</label>
-            <input type="text" id="address" name="address" value="Barrio la Pila Seca" required>
-        </div>
-        <div class="form-group">
-            <label for="email">Correo Electrónico</label>
-            <input type="email" id="email" name="email" value="Oscar@gmail.com" required>
-        </div>
-        <div class="form-group">
-            <label for="phone">Teléfono</label>
-            <input type="text" id="phone" name="phone" value="963621321321" required>
-        </div>
-        <div class="form-group">
-            <label for="state">Estado</label>
-            <input type="text" id="state" name="state" value="Chiapas" required>
-        </div>
-        <div class="form-group">
-            <label for="city">Ciudad</label>
-            <input type="text" id="city" name="city" value="Tuxtla de Dominguez" required>
-        </div>
-        <div class="button-group">
-            <button type="submit" class="authorize">Autorizar Acceso</button>
-            <button type="button" class="deny">Negar Acceso</button>
-        </div>
-    </form>
+    </div>
 </div>
