--- a/src/app/components/company/dialogs-materials/dialog-updatematerial/dialog-updatematerial.component.html
+++ b/src/app/components/company/dialogs-materials/dialog-updatematerial/dialog-updatematerial.component.html
@@ -1,9 +1,11 @@
 <div class="dialog-container">
     <h2 class="solicitud-titulo">Modificar Material</h2>
     <div class="input-container">
+      <p>Nombre del Material</p>
       <input type="text" id="name" class="input-field" placeholder="Periodico" required />
     </div>
     <div class="input-container">
+      <p>Cantidad (Kg)</p>
       <input type="number" id="quantity" class="input-field" placeholder="15 Kg" required />
     </div>
     <div class="button-container">
