Correción de interfaces a Responsive y creación de la interfaz chat

--- a/src/app/components/company/imaterials/imaterials.component.scss
+++ b/src/app/components/company/imaterials/imaterials.component.scss
@@ -21,3 +21,15 @@
     right: 50px; 
     font-size: 50px;
 }
+
+/* Media Query para pantallas más pequeñas */
+@media (max-width: 991px) {
+    .title {
+        margin-top: 180px; 
+        font-size: 32px; 
+    }
+    
+.circular-button{
+    bottom: 30px; 
+}
+}
