--- a/src/app/components/company/imaterials-request/imaterials-request.component.scss
+++ b/src/app/components/company/imaterials-request/imaterials-request.component.scss
@@ -97,3 +97,42 @@
     right: 50px; 
     font-size: 50px;
 }
+
+@media (max-width: 768px) {
+    .title {
+        margin-top: 200px;
+        text-align: center;
+    }
+
+    .card-container {
+        padding: 20px; 
+        gap: 20px;
+        margin-top: 20px;
+        margin-bottom: 90px;
+    }
+
+    .card {
+        width: 80%; 
+        height: auto; 
+    }
+
+    .imgprincipal {
+        height: 200px; 
+    }
+
+    .card-content h2 {
+        font-size: 18px;
+    }
+
+    .card-content h3 {
+        font-size: 16px; 
+    }
+
+    .card-content p {
+        font-size: 12px; 
+    }
+
+    .circular-button{
+        bottom: 20px; 
+    }
+}
