--- a/src/app/components/recycler/imaterialsrecycler/imaterialsrecycler.component.scss
+++ b/src/app/components/recycler/imaterialsrecycler/imaterialsrecycler.component.scss
@@ -95,3 +95,38 @@ button {
 button:hover {
     background-color: #0a6d0a;
 }
+
+/* Media Query para pantallas pequeñas */
+@media (max-width: 768px) {
+    .card-container {
+        padding: 20px;
+        gap: 20px; 
+        margin-top: 220px;
+        margin-bottom: 40px;
+    }
+
+    .card {
+        width: 90%; 
+    }
+
+    .imgprincipal {
+        height: 200px; 
+    }
+
+    .card-content h2 {
+        font-size: 18px;
+    }
+
+    .card-content h3 {
+        font-size: 16px; 
+    }
+
+    .card-content p {
+        font-size: 12px; 
+    }
+
+    button {
+        font-size: 14px; 
+        padding: 0.5rem;
+    }
+}
