--- a/src/app/components/users/icommunity/icommunity.component.scss
+++ b/src/app/components/users/icommunity/icommunity.component.scss
@@ -69,3 +69,39 @@
     object-fit: cover;
     transition: transform 0.5s ease;
 }
+
+/* Media Query para pantallas más pequeñas */
+@media (max-width: 768px) {
+    .card-container {
+        padding: 20px; 
+        gap: 40px; 
+        margin-top: 170px;
+        margin-bottom: 40px;
+    }
+
+    .card {
+        width: 100%; 
+    }
+
+    .card-header {
+        padding: 8px; 
+    }
+
+    .profile-pic {
+        width: 40px; 
+        height: 40px;
+        margin-right: 12px;
+    }
+
+    .user-info h2 {
+        font-size: 16px; 
+    }
+
+    .user-info .date {
+        font-size: 12px; 
+    }
+
+    .info h3 {
+        font-size: 12px; 
+    }
+}
