--- a/src/app/components/users/ipublications/ipublications.component.scss
+++ b/src/app/components/users/ipublications/ipublications.component.scss
@@ -100,3 +100,39 @@
     right: 50px; 
     font-size: 50px;
 }
+
+/* Media Query para pantallas más pequeñas */
+@media (max-width: 768px) {
+    .card-container {
+        padding: 20px; 
+        gap: 30px; 
+        margin-top: 170px;
+        margin-bottom: 50px;
+    }
+
+    .card {
+        width: 90%; 
+    }
+
+    .profile-pic {
+        width: 40px; 
+        height: 40px;
+        margin-right: 12px;
+    }
+
+    .user-info h2 {
+        font-size: 16px;
+    }
+
+    .user-info .date {
+        font-size: 12px; 
+    }
+
+    .info h3 {
+        font-size: 12px; 
+    }
+
+    .imgprincipal {
+        height: 200px; 
+    }
+}
