Conexion de Interfaces Primera Fase

--- a/src/app/components/recycler/imaterialsrecycler/imaterialsrecycler.component.html
+++ b/src/app/components/recycler/imaterialsrecycler/imaterialsrecycler.component.html
@@ -12,7 +12,7 @@
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut inventore beatae, quis itaque cum voluptate
             molestias molestiae</p>
-            <button>Ver Mas</button>
+            <button (click)=" routeToSeeRequest()" >Ver Mas</button>
         </div>
     </div>
 </div>
