--- a/src/app/components/admin/header-admin/header-admin.component.html
+++ b/src/app/components/admin/header-admin/header-admin.component.html
@@ -1,16 +1,14 @@
 <header class="header">
   <div class="back">
       <div class="menu container">
-          <a href="" ><img src="images/logo2.png" alt=""  class="logo"></a>
+          <a (click)="routeToMyTeam()" ><img src="images/logo2.png" alt=""  class="logo"></a>
           <input type="checkbox" id= "menu">
           <label for="menu">
               <img src="images/menu.png" alt="" width="25px">
           </label>
           <nav class="navbar">
               <ul>
-                  <li><a href="#">Mi Equipo</a></li>
-                  <li><a href="#">Empresas</a></li>
-                  <li><a href="#">Anuncios</a></li>
+                  <li><a routerLink="/seecompany" routerLinkActive="active">Empresas</a></li>
               </ul>
           </nav>
       </div>
