--- a/src/app/components/company/header-company/header-company.component.html
+++ b/src/app/components/company/header-company/header-company.component.html
@@ -1,17 +1,18 @@
 <header class="header">
     <div class="back">
         <div class="menu container">
-            <a href="" ><img src="images/logo2.png" alt=""  class="logo"></a>
+            <a (click)=" routeToCommunity()" ><img src="images/logo2.png" alt=""  class="logo"></a>
             <input type="checkbox" id= "menu">
             <label for="menu">
                 <img src="images/menu.png" alt="" width="25px">
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Estadisticas</a></li>
-                    <li><a href="#">Publicaciones</a></li>
-                    <li><a href="#">Mensajes</a></li>
-                    <li><a href="#">Acuerdos</a></li>
+                    <li><a routerLink="/request" routerLinkActive="active">Mis Solicitudes</a></li>
+                    <li><a routerLink="/publications" routerLinkActive="active">Mis Publicaciones</a></li>
+                    <li><a routerLink="/xs" routerLinkActive="active">Estadisticas</a></li>
+                    <li><a routerLink="/chat" routerLinkActive="active">Chat</a></li>
+                    <li><a routerLink="/publicity" routerLinkActive="active">Crear Anuncio</a></li>
                 </ul>
             </nav>
         </div>
