--- a/src/app/components/company/imaterials-request/imaterials-request.component.html
+++ b/src/app/components/company/imaterials-request/imaterials-request.component.html
@@ -18,6 +18,81 @@
             </div>
         </div>
     
+        <div class="card">
+            <div class="icons">
+                <img class="options" src="images/lapiz.png" alt="Modificar Soliditud de Material" (click)="updateMaterialRequest()">
+                <img class="options" src="images/eliminar.png" alt="Eliminar Solicitud de Material" (click)="deleteMaterialRequest()">
+            </div>
+            <img class="imgprincipal" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWTdNwzcNVwqK17r9u1xH0VoPTEP_SzWgIXA&s" alt="">
+            <div class="card-content">
+                <h2>Producto: </h2>
+                <h3>Precio $</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut inventore beatae, quis itaque cum voluptate
+                molestias molestiae</p>
+            </div>
+        </div>
+    
+        <div class="card">
+            <div class="icons">
+                <img class="options" src="images/lapiz.png" alt="Modificar Soliditud de Material" (click)="updateMaterialRequest()">
+                <img class="options" src="images/eliminar.png" alt="Eliminar Solicitud de Material" (click)="deleteMaterialRequest()">
+            </div>
+            <img class="imgprincipal" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWTdNwzcNVwqK17r9u1xH0VoPTEP_SzWgIXA&s" alt="">
+            <div class="card-content">
+                <h2>Producto: </h2>
+                <h3>Precio $</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut inventore beatae, quis itaque cum voluptate
+                molestias molestiae</p>
+            </div>
+        </div>
+    
+
+        <div class="card">
+            <div class="icons">
+                <img class="options" src="images/lapiz.png" alt="Modificar Soliditud de Material" (click)="updateMaterialRequest()">
+                <img class="options" src="images/eliminar.png" alt="Eliminar Solicitud de Material" (click)="deleteMaterialRequest()">
+            </div>
+            <img class="imgprincipal" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWTdNwzcNVwqK17r9u1xH0VoPTEP_SzWgIXA&s" alt="">
+            <div class="card-content">
+                <h2>Producto: </h2>
+                <h3>Precio $</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut inventore beatae, quis itaque cum voluptate
+                molestias molestiae</p>
+            </div>
+        </div>
+    
+
+        <div class="card">
+            <div class="icons">
+                <img class="options" src="images/lapiz.png" alt="Modificar Soliditud de Material" (click)="updateMaterialRequest()">
+                <img class="options" src="images/eliminar.png" alt="Eliminar Solicitud de Material" (click)="deleteMaterialRequest()">
+            </div>
+            <img class="imgprincipal" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWTdNwzcNVwqK17r9u1xH0VoPTEP_SzWgIXA&s" alt="">
+            <div class="card-content">
+                <h2>Producto: </h2>
+                <h3>Precio $</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut inventore beatae, quis itaque cum voluptate
+                molestias molestiae</p>
+            </div>
+        </div>
+    
+
+        <div class="card">
+            <div class="icons">
+                <img class="options" src="images/lapiz.png" alt="Modificar Soliditud de Material" (click)="updateMaterialRequest()">
+                <img class="options" src="images/eliminar.png" alt="Eliminar Solicitud de Material" (click)="deleteMaterialRequest()">
+            </div>
+            <img class="imgprincipal" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTWTdNwzcNVwqK17r9u1xH0VoPTEP_SzWgIXA&s" alt="">
+            <div class="card-content">
+                <h2>Producto: </h2>
+                <h3>Precio $</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut inventore beatae, quis itaque cum voluptate
+                molestias molestiae</p>
+            </div>
+        </div>
+    
+
+
 
     </div>
 
