--- a/src/app/components/company/imaterials-request/imaterials-request.component.scss
+++ b/src/app/components/company/imaterials-request/imaterials-request.component.scss
@@ -14,11 +14,12 @@
 
 .card-container {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
-    gap: 40px; 
+    gap: 80px; 
     margin-top: 30px;
     margin-bottom: 60px;
+    margin-left: 50px;
     padding: 50px;
 }
 
