--- a/src/app/components/users/header-users/header-users.component.html
+++ b/src/app/components/users/header-users/header-users.component.html
@@ -10,7 +10,7 @@
                 <ul>
                     <li><a routerLink="/chose" routerLinkActive="active">Registrarse</a></li>
                     <li><a routerLink="/login" routerLinkActive="active">Iniciar Sesion</a></li>
-                    <button class="button">Donar Aqui</button>
+                    <button class="button" (click)=" routeToPaypal()">Donar Aqui</button>
                 </ul>
             </nav>
         </div>
