Actualizacion y correcion de las rutas

--- a/src/app/components/admin/header-admin/header-admin.component.html
+++ b/src/app/components/admin/header-admin/header-admin.component.html
@@ -8,7 +8,7 @@
           </label>
           <nav class="navbar">
               <ul>
-                  <li><a routerLink="/seecompany" routerLinkActive="active">Empresas</a></li>
+                  <li><a routerLink="/admin/business" routerLinkActive="active">Empresas</a></li>
               </ul>
           </nav>
       </div>
