--- a/src/app/components/recycler/header-recycler/header-recycler.component.html
+++ b/src/app/components/recycler/header-recycler/header-recycler.component.html
@@ -8,8 +8,9 @@
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a routerLink="/materialsrecycler" routerLinkActive="active">Solicitudes de Materiales</a></li>
-                    <li><a routerLink="/chat" routerLinkActive="active">Chat</a></li>
+                    <li><a routerLink="/recycler/materialsrecycler" routerLinkActive="active">Solicitudes de Materiales</a></li>
+                    <li><a routerLink="/recycler/publications" routerLinkActive="active">Mis Publicaciones</a></li>
+                    <li><a routerLink="/recycler/chat" routerLinkActive="active">Chat</a></li>
                     <li><a href="#">Mis Acuerdos</a></li>
                 </ul>
             </nav>
