--- a/src/app/components/recycler/iseerequest/iseerequest.component.html
+++ b/src/app/components/recycler/iseerequest/iseerequest.component.html
@@ -15,7 +15,7 @@
         <input type="number" placeholder="">
         <h3>$500.00</h3>
         <div class="actions">
-            <button>Chatear con la Empresa</button>
+            <button (click)="routeToChat()">Chatear con la Empresa</button>
             <button>Aceptar solicitud</button>
         </div>
     </div>
