--- a/src/app/components/admin/irequest-business/irequest-business.component.html
+++ b/src/app/components/admin/irequest-business/irequest-business.component.html
@@ -1,4 +1,4 @@
-<app-header-company/>
+<app-header-admin/>
 <h2 class="title">Solicitudes de Empresa</h2>
 <app-businesstable/>
 <app-footer-users/>
