--- a/src/app/components/company/header-company/header-company.component.scss
+++ b/src/app/components/company/header-company/header-company.component.scss
@@ -58,6 +58,31 @@ header {
     display: block;
 }
 
+.custom-select {
+    background-color: #ebebeb; /* Fondo blanco para coherencia */
+    border-color: #00000000;
+    border-radius: 5px; /* Bordes redondeados */
+    padding: 10px; /* Espaciado interno */
+    font-size: 16px; /* Tamaño de letra consistente */
+    cursor: pointer; /* Cambia el cursor a pointer */
+    margin: 0 10px; /* Espaciado lateral */
+    cursor: pointer;
+}
+
+/* Hover y foco en el select */
+.custom-select:hover, .custom-select:focus {
+    border-color: #000000; /* Cambia el borde al pasar el mouse */
+    outline: none; /* Elimina el borde azul estándar */
+    cursor: pointer;
+}
+
+/* Opciones dentro del select */
+.custom-select option {
+    padding: 10px; /* Espaciado interno */
+    cursor: pointer;
+}
+
+
 .button {
     background-color: #04db65; 
     border: none; 
@@ -98,6 +123,11 @@ header {
 
     .back {
         padding: 70px 0;
+    }
+
+    .custom-select {
+        width: 100%; /* Ancho completo en pantallas pequeñas */
+        margin-top: 10px; /* Espaciado superior */
     }
 
     .menu .navbar {
