--- a/src/app/components/company/irequest-advertisement/irequest-advertisement.component.html
+++ b/src/app/components/company/irequest-advertisement/irequest-advertisement.component.html
@@ -1,4 +1,4 @@
-<app-header-admin></app-header-admin>
+<app-header-company/>
 <div class="container">
     <div class="form-wrapper">
         <div class="form-container">
@@ -13,8 +13,9 @@
                 <input type="date" id="final" name="final" required>
 
                 <input type="file" id="fotos" name="fotos" accept="image/*">
-                <button type="submit">Crear anuncio</button>
+                <button type="submit" (click)="routeToPayPal()">Crear anuncio</button>
             </form>
         </div>
     </div>
 </div>
+<app-footer-users/>
