79-hd_modificaciones_develop_009

--- a/src/app/components/admin/dialogsadmin/dialogupdateadmin/dialogupdateadmin.component.html
+++ b/src/app/components/admin/dialogsadmin/dialogupdateadmin/dialogupdateadmin.component.html
@@ -1,11 +1,11 @@
 <div class="dialog-container">
-    <h2 class="solicitud-titulo">Solicitud de Materiales</h2>
+    <h2 class="solicitud-titulo">Editar Administrdor</h2>
     <div class="input-container">
         <p>Nombre del Administrador</p>
       <input type="text" id="name" class="input-field" placeholder="Osvaldo Ochoa" required />
     </div>
     <div class="input-container">
-        <p>Correo</p>
+        <p>Correo Electrónico</p>
         <input type="email" id="email" class="input-field" placeholder="osvagmail" required />
     </div>
     <div class="input-container">
