--- a/src/app/components/recycler/iseerequest/iseerequest.component.html
+++ b/src/app/components/recycler/iseerequest/iseerequest.component.html
@@ -5,9 +5,9 @@
     </div>
     <div class="info">
         <h2>ProLife </h2>
-        <h2>Papel Periodico</h2>
+        <h2>Papel Periódico</h2>
         <h2>$12.00</h2>
-        <h2>Cantidad Minima: 25 kg</h2>
+        <h2>Cantidad Mínima: 25 kg</h2>
         <p>Se solicita papel periodico en buenas condiciones, arrfs ds f fdgsdf g df gds g dfs gdfsg df df fdds df df f desgaesdsds gds ga ds fs  dfsd gdfg  dfhdfhfs hdshsdhdfhdf  dfd fd f dgdfgdfgfg12 kg para realizar esta compra, preferentemente que no se enceuntre roto por pedazos.</p>
     </div> 
     <div class="calculator">
