--- a/src/app/components/users/dialogs-publications/dialog-addpublication/dialog-addpublication.component.html
+++ b/src/app/components/users/dialogs-publications/dialog-addpublication/dialog-addpublication.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-container">
-    <h2 class="solicitud-titulo">Agregar Publicacion</h2>
+    <h2 class="solicitud-titulo">Agregar Publicación</h2>
     <div class="input-container">
       <textarea id="description" class="input-field" placeholder="Descripción"></textarea>
     </div>
