--- a/src/app/components/users/dialogs-publications/dialog-updatepublication/dialog-updatepublication.component.html
+++ b/src/app/components/users/dialogs-publications/dialog-updatepublication/dialog-updatepublication.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-container">
-    <h2 class="solicitud-titulo">Solicitud de Materiales</h2>
+    <h2 class="solicitud-titulo">Modificar Publicación</h2>
     <div class="input-container">
       <p>Descripción</p>
       <textarea id="description" class="input-field" placeholder="Estamos felices de iniciar."></textarea>
