--- a/src/app/components/users/ichose-rol/ichose-rol.component.scss
+++ b/src/app/components/users/ichose-rol/ichose-rol.component.scss
@@ -64,6 +64,7 @@
     padding: 8px 16px;
     background-color: rgba(16, 131, 16, 1);
     border-radius: 4px;
+    font-weight: bold;
     margin-top: 16px;
     color: aliceblue;
     text-decoration: none; 
