--- a/src/app/components/users/icommunity/icommunity.component.html
+++ b/src/app/components/users/icommunity/icommunity.component.html
@@ -19,7 +19,7 @@
 
     <div class="card">
         <div class="card-header">
-            <img class="profile-pic" src="https://via.placeholder.com/50" alt="Profile Picture">
+            <img class="profile-pic" src="images/logo2.png" alt="Profile Picture">
             <div class="user-info">
                 <h2>Viridis</h2>
                 <p class="date">13 de Noviembre, 2024</p>
