--- a/src/app/components/admin/adminstable/adminstable.component.html
+++ b/src/app/components/admin/adminstable/adminstable.component.html
@@ -20,10 +20,10 @@
       <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
         <td mat-cell *matCellDef="let song">
-          <button (click)="updateAdmin()" class="table-button" color="secondary">
+          <button (click)="updateAdmin()" class="table-button-edit" color="secondary">
             <mat-icon>edit</mat-icon>
           </button>
-          <button (click)="deleteAdmin()" class="table-button" mat-icon-button color="warn" >
+          <button (click)="deleteAdmin()" class="table-button-delete" mat-icon-button color="warn" >
             <mat-icon>delete</mat-icon>
           </button>
         </td>
