--- a/src/app/components/admin/dialogsadmin/dialogaddadmin/dialogaddadmin.component.html
+++ b/src/app/components/admin/dialogsadmin/dialogaddadmin/dialogaddadmin.component.html
@@ -1,10 +1,10 @@
 <div class="dialog-container">
-    <h2 class="solicitud-titulo">Solicitud de Materiales</h2>
+    <h2 class="solicitud-titulo">Agregar Administrador</h2>
     <div class="input-container">
       <input type="text" id="name" class="input-field" placeholder="Nombre del Administrador" required />
     </div>
     <div class="input-container">
-        <input type="email" id="email" class="input-field" placeholder="Correo Electronico" required />
+        <input type="email" id="email" class="input-field" placeholder="Correo Electrónico" required />
     </div>
     <div class="input-container">
         <input type="password" id="password" class="input-field" placeholder="Contraseña" required />
