--- a/src/app/components/company/dialog-materialrequest/dialog-addmaterialrequest/dialog-addmaterialrequest.component.html
+++ b/src/app/components/company/dialog-materialrequest/dialog-addmaterialrequest/dialog-addmaterialrequest.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-container">
-  <h2 class="solicitud-titulo">Solicitud de Materiales</h2>
+  <h2 class="solicitud-titulo">Agregar Materiales</h2>
   <div class="input-container">
     <select id="name" class="input-field" required>
       <option value="" disabled selected>Selecciona un producto</option>
@@ -13,7 +13,7 @@
     <input type="number" id="price" class="input-field" placeholder="Precio" required />
   </div>
   <div class="input-container">
-    <input type="number" id="quantity" class="input-field" placeholder="Cantidad Minima (Kg)" required />
+    <input type="number" id="quantity" class="input-field" placeholder="Cantidad Mínima (Kg)" required />
   </div>
   <div class="input-container">
     <textarea id="description" class="input-field" placeholder="Descripción"></textarea>
