--- a/src/app/components/company/dialogs-materials/dialog-deletematerial/dialog-deletematerial.component.html
+++ b/src/app/components/company/dialogs-materials/dialog-deletematerial/dialog-deletematerial.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-container">
-    <h2 class="solicitud-titulo">¿Estás seguro que deseas eliminar esteg material?</h2>
+    <h2 class="solicitud-titulo">¿Estás seguro que deseas eliminar este material?</h2>
     <div class="button-container">
         <button type="button" class="close-button" (click)="closeDialog()">Cancelar</button>
         <button type="button" class="add-button">Eliminar</button>
