--- a/src/app/components/recycler/agreementstable/agreementstable.component.scss
+++ b/src/app/components/recycler/agreementstable/agreementstable.component.scss
@@ -9,7 +9,7 @@
     padding: 0.75rem; 
     border: none; 
     border-radius: 8px; 
-    background-color: #489f3b; 
+    background-color: #108310; 
     color: white; 
     font-size: 16px;
     font-weight: bold;
@@ -23,8 +23,6 @@
 
 .custom-table th, .custom-table td {
     padding: 12px; 
-    text-align: center; /* Centrado de texto */
-    vertical-align: middle; 
     text-align: center;
     font-size: 16px;
     background-color: rgb(255, 255, 255);
