--- a/src/app/components/users/dialogs-publications/dialog-deletepublication/dialog-deletepublication.component.html
+++ b/src/app/components/users/dialogs-publications/dialog-deletepublication/dialog-deletepublication.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-container">
-    <h2 class="solicitud-titulo">¿Estás seguro que deseas eliminar esta publicacion?</h2>
+    <h2 class="solicitud-titulo">¿Estás seguro que deseas eliminar esta publicación?</h2>
     <div class="button-container">
         <button type="button" class="close-button" (click)="closeDialog()">Cancelar</button>
         <button type="button" class="add-button">Eliminar</button>
